# Applied-Machine-Learning-Course

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-optional.txt  requirements.txt
archive/: notes_session_1_handwritten.ipynb
docs/: REPOSITORY_GUIDE.md
notebooks/: 01_introduction.ipynb  02_ml_foundations.ipynb  03_regression.ipynb  04_classification.ipynb  05_clustering.ipynb  06_neural_networks.ipynb  07_cnn.ipynb  08_resampling.ipynb  09_svm.ipynb  10_trees_ensembles.ipynb  11_xai_experimentation.ipynb  12_bonus_generative_models_vae.ipynb  README.md
notebooks/00_prerequisites/: 00_python_numpy_crash_course.ipynb  01_pandas_intro.ipynb
notebooks/bonus/: minigpt.ipynb
scripts/: 07_train_cnn.py
src/aml_course/: __init__.py  utils.py
